gl51-master/src/test/deca/context/invalid/test_rule3_29.deca
//Description
// Expression non boolean dans une condition

{
    if(2) {} //2 n'est pas un boolean
    //PASSED
}